Kubernetes/remote/cloud/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: access-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
  - host: ems.100.55.144.231.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ems-client-service
            port:
              number: 80

  - host: hospital.100.55.144.231.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hospital-client-service
            port:
              number: 80

  - host: storage.100.55.144.231.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage-client-service
            port:
              number: 80
